--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,21 +38,18 @@ dependencies:
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.7.1
   flutter_riverpod: ^2.3.0
-  google_sign_in: ^6.0.2
   firebase_auth: ^4.2.10
   freezed_annotation: ^2.2.0
   liquid_pull_to_refresh: ^3.0.1
-  image_picker: ^1.0.0
   http: ^1.1.0
   firebase_storage: ^11.1.0
-  path_provider: ^2.0.14
-  screenshot: ^2.0.0
+  # path_provider: ^2.0.14
   flutter_rating_bar: ^4.0.1
   permission_handler: ^10.2.0
-  flutter_inappwebview: ^5.7.2+3
+  # flutter_inappwebview: ^5.7.2+3
   intl: ^0.18.1
-  razorpay_flutter: ^1.3.4
-  flutter_local_notifications: ^14.1.1
+  # razorpay_flutter: ^1.3.4
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
