--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # razorpay_flutter: ^1.3.4
   url_launcher: ^6.1.12
   quickalert: ^1.0.1
+  web3dart: ^2.7.1
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
