--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.7.1
   flutter_riverpod: ^2.3.0
-  firebase_auth: ^4.2.10
-  freezed_annotation: ^2.2.0
+  firebase_auth: ^4.7.2
+  freezed_annotation: ^2.4.1
   liquid_pull_to_refresh: ^3.0.1
   http: ^1.1.0
   firebase_storage: ^11.1.0
@@ -51,6 +51,7 @@ dependencies:
   # razorpay_flutter: ^1.3.4
   url_launcher: ^6.1.12
   quickalert: ^1.0.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
