--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   quickalert: ^1.0.1
   json_annotation: ^4.8.1
   web3dart: ^2.7.1
+  cloud_firestore: ^4.8.4
 
 dev_dependencies:
   flutter_test:
