--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  google_fonts: ^4.0.4
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.7.1
