--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   web3dart: ^2.7.1
   cloud_firestore: ^4.8.4
   shared_preferences: ^2.2.0
+  rflutter_alert: ^2.0.7
 
 dev_dependencies:
   flutter_test:
