--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   cloud_firestore: ^4.8.4
   shared_preferences: ^2.2.0
   rflutter_alert: ^2.0.7
+  scratcher: ^2.3.0
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
